#263 Fixed overflowing containers

--- a/client/src/styles/dashboard.scss
+++ b/client/src/styles/dashboard.scss
@@ -32,6 +32,7 @@
   box-shadow: 0 23px 44px 0 #b0b7c324;
   border-radius: 8px;
   background-color: white;
+  overflow: hidden;
   width: 100%;
   ul {
     padding-top: 5%;
